@@ -132,9 +132,9 @@ def secure_query(name, rr_type, rr_class="IN", flags=["RD"], tries = 1, flex=Fal
 		raise Exception("%s lookup failed (server error or dnssec validation failed)" % name)
 	if pkt.rcode() == "NXDOMAIN":
 		if "AD" in pkt.flags():
-			raise Exception("%s lookup failed (non-existence proven by DNSSEC)" % hostname )
+			raise Exception("%s lookup failed (non-existence proven by DNSSEC)" % name )
 		else:
-			raise Exception("%s lookup failed" % hostname )
+			raise Exception("%s lookup failed" % name )
 	if pkt.rcode() == "NOERROR":
 		if "AD" not in pkt.flags():
 			if not flex:
@@ -698,7 +698,7 @@ class resource_record:
 
 	def __len__(self):
 		try:
-			return len(_rdfs)
+			return len(self._rdfs)
 		except:
 			return 0
 
