@@ -24,6 +24,8 @@
 	  zone to be an NSEC3 (or its RRSIG) covering an empty non terminal.
 	* New functions: ldns_pkt_ixfr_request_new and
 	  ldns_pkt_ixfr_request_new_frm_str.
+	* bugfix #507: ldnsx Fix use of non-existent variables and not
+	  properly referring to instance variable.  Patch from shussain.
 
 1.6.16	2012-11-13
 	* Fix Makefile to build pyldns with BSD make
